// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPanelTest render - isPanelOpen = false 1`] = `
<GenericPanel
  className="settingsPanel"
  closeButtonAriaLabel="Close settings panel"
  hasCloseButton={true}
  headerText="Settings"
  innerPanelAutomationId="settings-panel"
  isOpen={false}
  layerProps={
    {
      "className": undefined,
    }
  }
  onDismiss={[Function]}
>
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
</GenericPanel>
`;

exports[`SettingsPanelTest render - isPanelOpen = true 1`] = `
<GenericPanel
  className="settingsPanel"
  closeButtonAriaLabel="Close settings panel"
  hasCloseButton={true}
  headerText="Settings"
  innerPanelAutomationId="settings-panel"
  isOpen={true}
  layerProps={
    {
      "className": undefined,
    }
  }
  onDismiss={[Function]}
>
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
</GenericPanel>
`;

exports[`SettingsPanelTest render - with custom layer class name 1`] = `
<GenericPanel
  className="settingsPanel"
  closeButtonAriaLabel="Close settings panel"
  hasCloseButton={true}
  headerText="Settings"
  innerPanelAutomationId="settings-panel"
  layerProps={
    {
      "className": "test-layer-class-name",
    }
  }
  onDismiss={[Function]}
>
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
  <TestSettings
    deps={
      {
        "detailsViewActionMessageCreator": {
          "closeSettingsPanel": [Function],
        },
        "settingsProvider": {
          "all": [Function],
        },
        "userConfigMessageCreator": {},
      }
    }
    featureFlagData={
      {
        "test-flag": false,
      }
    }
    userConfigurationStoreState={{}}
  />
</GenericPanel>
`;
